--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   build:
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [ubuntu-latest]
     if: >
       (github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success')
     outputs:
